--- a/dokumentation/src/anhang.tex
+++ b/dokumentation/src/anhang.tex
@@ -1,157 +1,29 @@
 \section{Anhang}
-\subsection{Analysephase}
+\subsection{Diagramme und Grafiken}
 \subsubsection{Vergleich: DLD Aufwand vs QGram Aufwand mit Fuzzy Join}
 \subsubsection{Vergleich: Theoretischer DLD vs QGram Zeitvergleich }
-\subsubsection{Projektkosten}
-\begin{table}[!htp]
-	\centering
-	\caption{Projektkosten}
-	\label{tabelle:projektkosten}
-	\begin{tabular}{llllll}
-		\rowcolor[HTML]{9698ED}
-		{\color[HTML]{FFFFFF} \textbf{Vorgang}} & {\color[HTML]{FFFFFF} \textbf{Mitarbeiter}} & {\color[HTML]{FFFFFF} \textbf{Stunden}} & {\color[HTML]{FFFFFF} \textbf{Personal}} & {\color[HTML]{FFFFFF} \textbf{Ressources}} & {\color[HTML]{FFFFFF} \textbf{Gesamt}} \\
-		Entwicklungskosten                      & 1                                           & 70                                      & 385.00 €                                 & 1,295.00 €                                 & 1,680.00 €                             \\
-		\rowcolor[HTML]{BBDAFF}
-		Fachgespräch                            & 2                                           & 5                                       & 350.00 €                                 & 92.50 €                                    & 1,842.50 €                             \\
-		Code Review                             & 2                                           & 2                                       & 140.00 €                                 & 37.00 €                                    & 317.00 €                               \\
-		\rowcolor[HTML]{BBDAFF}
-		Abnahme                                 & 2                                           & 0.5                                     & 35.00 €                                  & 9.25 €                                     & 44.25 €                                \\
-		&                                             &                                         & \multicolumn{2}{l}{\textbf{Projektkosten Gesamt:}}                                    & \textbf{3,883.75 €}
-	\end{tabular}
-\end{table}
-
-\subsubsection{Lastenheft}
-\renewcommand{\labelenumii}{\theenumii}
-\renewcommand{\theenumii}{\theenumi.\arabic{enumii}.}
-\begin{enumerate}
-    \item Spezifikationen des Algorithmus
-        \begin{enumerate}
-            \item Der Algorithmus muss 2 Listen von Strings verarbeiten können,
-            wobei eine dieser Listen garantiert in den Speicher passt und die zweite
-            eine beliebige Größe haben kann.
-            \item Der Algorithmus muss aus der ersten Liste sämtliche Strings finden,
-            welche den Strings aus der zweiten Liste ähneln. Die gefundenen Strings
-            sollen ausgegeben werden.
-            \item Der Algorithmus ist in C zu programmieren.
-            \item der Algorithmus verarbeitet 7-Bit ASCII Strings schreibungsunabhängig. Zeichensetzung
-            ist beim Vergleich generell zu ignorieren; Ausnahmen bilden die
-            Charaktere Bindestrich, Unterstrich und Leerzeichen.
-        \end{enumerate}
-    \item Spezifikationen des Kommandozeilenprogramms
-        \begin{enumerate}
-            \item Der Algorithmus muss über die Kommmandozeile ausführbar sein.
-            \item Die Erste Liste wird immer als Dateiname übergeben.
-            \item Die zweite Liste kann entweder als Dateiname oder über STDIN übergeben werden.
-            \item die GNU Standards für Kommandozeilenprogramme müssen eingehalten werden.
-            \item Die POSIX Utility Guidelines müssen eingehalten werden.
-            \item Das Programm muss unter openSuSE 13.1 laufen.
-            \item Alle für das Programm erforderliche Abhängigkeiten
-            (z.B. Pakete, Bibliotheken) müssen für openSuSE 13.1 verfügbar sein.
-            \item Das Programm muss auf einem einzigen Kern lauffähig sein, und
-            darf das laufen auf mehreren Kernen in einem Shared-Memory-Environment
-            unterstützen.
-            \item Das Programm darf mit maximal 32GB Arbeitsspeicher arbeiten, und nicht mehr
-            als 200 GB Festplattenspeicher zur Kalkulation verwenden. Zwischenprozessliche Kommunikationswege
-            sind ausgeschlossen.
-            \item Das Programm gibt Fehler und Debug Daten über STDERR aus.
-            \item Errechnete Ergebnisse werden über STDOUT ausgegeben.
-            \item Die Zielplatform ist Intel x86-64 (intel64).
-        \end{enumerate}
-    \item Spezifikationen der Qualitätssicherung
-        \begin{enumerate}
-            \item Der Algorithmus muss überprüfbar sein.
-            \item Unittests sind verfügbar gemacht worden.
-        \end{enumerate}
-    \item Spezifikationen der Dokumentation
-        \begin{enumerate}
-            \item Sämtliche Funktionen müssen über einen Doc String dokumentiert werden
-            \item Die Doc Strings der Funktionen müssen auf Englisch geschrieben werden.
-        \end{enumerate}
-\end{enumerate}
-
-\subsubsection{Nutzwertanalyse: Projektentwicklung}
-\begin{table}[!htp]
-	\centering
-	\caption{Nutzwertanalyse Projektentwicklung}
-	\label{nwa:projektentwicklung}
-	\begin{tabular}{llllllllll}
-		\rowcolor[HTML]{9698ED}
-		{\color[HTML]{FFFFFF} \textbf{Kriterien}} & {\color[HTML]{FFFFFF} \textbf{Gewicht}} & {\color[HTML]{FFFFFF} \textbf{Externe Entwicklung}} & {\color[HTML]{FFFFFF} \textbf{}}       & {\color[HTML]{FFFFFF} \textbf{Interne Entwicklung}} & {\color[HTML]{FFFFFF} \textbf{}}       & {\color[HTML]{FFFFFF} \textbf{Dedizierter 12-Kerner}} & {\color[HTML]{FFFFFF} \textbf{}}       & {\color[HTML]{FFFFFF} \textbf{Cluster}}   & {\color[HTML]{FFFFFF} \textbf{}}       \\
-		\rowcolor[HTML]{9698ED}
-		{\color[HTML]{FFFFFF} \textbf{}}          & {\color[HTML]{FFFFFF} \textbf{}}        & {\color[HTML]{FFFFFF} \textbf{Bewertung}}           & {\color[HTML]{FFFFFF} \textbf{Gesamt}} & {\color[HTML]{FFFFFF} \textbf{Bewertung}}           & {\color[HTML]{FFFFFF} \textbf{Gesamt}} & {\color[HTML]{FFFFFF} \textbf{Bewertung}}             & {\color[HTML]{FFFFFF} \textbf{Gesamt}} & {\color[HTML]{FFFFFF} \textbf{Bewertung}} & {\color[HTML]{FFFFFF} \textbf{Gesamt}} \\
-		Projektkosten                             & 45.00\%                                 & 4                                                   & 1.8                                    & 5                                                   & 2.25                                   & 4                                                     & 1.8                                    & 3                                         & 1.35                                   \\
-		\rowcolor[HTML]{BBDAFF}
-		Nachhaltigkeit                            & 15.00\%                                 & 4                                                   & 0.6                                    & 4                                                   & 0.6                                    & 1                                                     & 0.15                                   & 1                                         & 0.15                                   \\
-		Flexibilit채t                              & 5.00\%                                  & 3                                                   & 0.15                                   & 5                                                   & 0.25                                   & 4                                                     & 0.2                                    & 4                                         & 0.2                                    \\
-		\rowcolor[HTML]{BBDAFF}
-		Unterhaltskosten                          & 35.00\%                                 & 4                                                   & 1.4                                    & 4                                                   & 1.4                                    & 2                                                     & 0.7                                    & 1                                         & 0.35                                   \\
-		\textbf{Gesamt}                           & \textbf{100.00\%}                       & \textbf{}                                           & \textbf{3.95}                          & \textbf{}                                           & \textbf{4.5}                           & \textbf{}                                             & \textbf{2.85}                          & \textbf{}                                 & \textbf{2.05}
-	\end{tabular}
-\end{table}
-
 \subsubsection{Use-Case QGJoin}
-
-\subsection{Entwurfsphase}
+\begin{figure}
+	\label{fig:qgjoinUseCase}
+	\caption{Use-Case Diagramm des QGJoin Programms}
+	\includegraphics[width=\textwidth]{qgjoin_usecase}
+\end{figure}
 \subsubsection{Geschäftslogik Alt}
 \begin{figure}
 	\label{fig:geschäftslogikAlt}
 	\caption{UML Diagramm der bisherigen Geschäftslogik}
 \end{figure}
-\subsubsection{Nutzwertanalyse: Programmiersprachen}
 
-\begin{table}[!htp]
-    \centering
-    \caption{Nutzwertanalyse der Programmiersprachen}
-    \label{nwa:sprachen}
-    \begin{tabular}{llllllllll}
-        \rowcolor[HTML]{9698ED}
-        {\color[HTML]{FFFFFF} \textbf{Kriterien}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Gewicht}}} & \multicolumn{2}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{C}}}                                                                                              & \multicolumn{2}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{C++}}}                                                                                            & \multicolumn{2}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Java}}}                                                                                           & \multicolumn{2}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Haskell}}}                                                                                        \\
-        \rowcolor[HTML]{9698ED}
-        {\color[HTML]{FFFFFF} \textbf{}}          & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{}}}        & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Bewertung}}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Gesamt}}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Bewertung}}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Gesamt}}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Bewertung}}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Gesamt}}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Bewertung}}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Gesamt}}} \\
-        Performanz                                & 30.00\%                                                                             & 5                                                                                     & 1.5                                                                                & 5                                                                                     & 1.5                                                                                & 4                                                                                     & 1.2                                                                                & 5                                                                                     & 1.5                                                                                \\
-        \rowcolor[HTML]{BBDAFF}
-        Speichereffizienz                         & 30.00\%                                                                             & 5                                                                                     & 1.5                                                                                & 5                                                                                     & 1.5                                                                                & 3                                                                                     & 0.9                                                                                & 4                                                                                     & 1.2                                                                                \\
-        Dokumentation                             & 20.00\%                                                                             & 5                                                                                     & 1                                                                                  & 4                                                                                     & 0.8                                                                                & 4                                                                                     & 0.8                                                                                & 2                                                                                     & 0.4                                                                                \\
-        \rowcolor[HTML]{BBDAFF}
-        Systemische Vorraussetzungen              & 10.00\%                                                                             & 5                                                                                     & 0.5                                                                                & 5                                                                                     & 0.5                                                                                & 3                                                                                     & 0.3                                                                                & 3                                                                                     & 0.3                                                                                \\
-        Datenstrukturen                           & 10.00\%                                                                             & 3                                                                                     & 0.3                                                                                & 4                                                                                     & 0.4                                                                                & 5                                                                                     & 0.5                                                                                & 5                                                                                     & 0.5                                                                                \\
-        \rowcolor[HTML]{BBDAFF}
-        \textbf{Gesamt}                           & \textbf{100.00\%}                                                                   & \textbf{}                                                                             & \textbf{4.8}                                                                       & \textbf{}                                                                             & \textbf{4.7}                                                                       & \textbf{}                                                                             & \textbf{3.7}                                                                       & \textbf{}                                                                             & \textbf{3.9}
-    \end{tabular}
-\end{table}
 
-\subsubsection{Nutzwertanalyse: Datentyp der Menge Q}
 
-\begin{table}[!htp]
-    \centering
-	\caption{Nutzwertanalyse der Datentypen für Q}
-    \label{nwa:datentyp}
-    \begin{tabular}{llllll}
-        \rowcolor[HTML]{9698ED}
-        \cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} }                                     & \cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} }                                   & \multicolumn{2}{l}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Hashmap}}} & \multicolumn{2}{l}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Binärbaum}}} \\
-        \rowcolor[HTML]{9698ED}
-        \multirow{-2}{*}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Kriterien}}} & \multirow{-2}{*}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Gewicht}}} & {\color[HTML]{FFFFFF} \textbf{Bewertung}}  & {\color[HTML]{FFFFFF} \textbf{Gesamt}} & {\color[HTML]{FFFFFF} \textbf{Bewertung}}   & {\color[HTML]{FFFFFF} \textbf{Gesamt}}  \\
-        Speicheraufwand                                                                     & 25.00\%                                                                           & 2                                          & 0.5                                    & 2                                           & 0.5                                     \\
-        \rowcolor[HTML]{BBDAFF}
-        Schnelligkeit Daten Einfügen (Insert                                                & 20.00\%                                                                           & 5                                          & 1                                      & 4                                           & 0.8                                     \\
-        Schnelligkeit Auslesen (Look-up)                                                    & 55.00\%                                                                           & 5                                          & 2.75                                   & 4                                           & 2.2                                     \\
-        \rowcolor[HTML]{BBDAFF}
-        \textbf{Gesamt}                                                                     & \textbf{100.00\%}                                                                 & \textbf{}                                  & \textbf{4.25}                          & \textbf{}                                   & \textbf{3.5}
-    \end{tabular}
-\end{table}
 
-\subsubsection{Pseudocode: Algorithmus}
-\begin{figure}[!htp]
-	\caption{Aktivitätsdiagramm der Programmlogik}
-	\label{listing:pseudocode}
-	\lstinputlisting[language=C, caption=Pseudocode des zu implementierenden Algorithmus]{anhang/pseudo.code}
-	\centering
-\end{figure}
+}
+
 \subsubsection{Aktivitätsdiagramm: Programmlogik}
 \begin{figure}[!htp]
 	\caption{Programmlogik als UML Aktivitätsdiagramm}
 	\label{fig:programmlogik}
-	\includegraphics[width=\textwidth]{programmlogik}
+	\includegraphics[width=\textwidth]{algo}
 	\centering
 \end{figure}
 
@@ -171,23 +43,162 @@
     \centering
 \end{figure}
 
-\subsubsection{Pflichtenheft}
 
-\subsection{Implementierungsphase}
+
+\subsection{Tabellen}
+\subsubsection{Projektkosten}
+\begin{sidewaystable}[!htp]
+	\centering
+	\caption{Projektkosten}
+	\label{tabelle:projektkosten}
+	\begin{tabular}{l{.16\textwidth}l{.16\textwidth}l{.16\textwidth}l{.16\textwidth}l{.16\textwidth}l{.16\textwidth}}
+		\rowcolor[HTML]{9698ED}
+		{\color[HTML]{FFFFFF} \textbf{Vorgang}} & {\color[HTML]{FFFFFF} \textbf{Mitarbeiter}} & {\color[HTML]{FFFFFF} \textbf{Stunden}} & {\color[HTML]{FFFFFF} \textbf{Personal}} & {\color[HTML]{FFFFFF} \textbf{Ressources}} & {\color[HTML]{FFFFFF} \textbf{Gesamt}} \\
+		Entwicklungskosten                      & 1                                           & 70                                      & 385.00 €                                 & 1,295.00 €                                 & 1,680.00 €                             \\
+		\rowcolor[HTML]{BBDAFF}
+		Fachgespräch                            & 2                                           & 5                                       & 350.00 €                                 & 92.50 €                                    & 1,842.50 €                             \\
+		Code Review                             & 2                                           & 2                                       & 140.00 €                                 & 37.00 €                                    & 317.00 €                               \\
+		\rowcolor[HTML]{BBDAFF}
+		Abnahme                                 & 2                                           & 0.5                                     & 35.00 €                                  & 9.25 €                                     & 44.25 €                                \\
+		&                                             &                                         & \multicolumn{2}{l}{\textbf{Projektkosten Gesamt:}}                                    & \textbf{3,883.75 €}
+	\end{tabular}
+\end{sidewaystable}
+
+\subsubsection{Nutzwertanalyse: Projektentwicklung}
+\begin{sidewaystable}[!htp]
+	\centering
+	\caption{Nutzwertanalyse Projektentwicklung}
+	\label{nwa:projektentwicklung}
+	\begin{tabular}{l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}}
+		\rowcolor[HTML]{9698ED}
+		{\color[HTML]{FFFFFF} \textbf{Kriterien}} & {\color[HTML]{FFFFFF} \textbf{Gewicht}} & {\color[HTML]{FFFFFF} \textbf{Externe Entwicklung}} & {\color[HTML]{FFFFFF} \textbf{}}       & {\color[HTML]{FFFFFF} \textbf{Interne Entwicklung}} & {\color[HTML]{FFFFFF} \textbf{}}       & {\color[HTML]{FFFFFF} \textbf{Dedizierter 12-Kerner}} & {\color[HTML]{FFFFFF} \textbf{}}       & {\color[HTML]{FFFFFF} \textbf{Cluster}}   & {\color[HTML]{FFFFFF} \textbf{}}       \\
+		\rowcolor[HTML]{9698ED}
+		{\color[HTML]{FFFFFF} \textbf{}}          & {\color[HTML]{FFFFFF} \textbf{}}        & {\color[HTML]{FFFFFF} \textbf{Bewertung}}           & {\color[HTML]{FFFFFF} \textbf{Gesamt}} & {\color[HTML]{FFFFFF} \textbf{Bewertung}}           & {\color[HTML]{FFFFFF} \textbf{Gesamt}} & {\color[HTML]{FFFFFF} \textbf{Bewertung}}             & {\color[HTML]{FFFFFF} \textbf{Gesamt}} & {\color[HTML]{FFFFFF} \textbf{Bewertung}} & {\color[HTML]{FFFFFF} \textbf{Gesamt}} \\
+		Projektkosten                             & 45.00\%                                 & 4                                                   & 1.8                                    & 5                                                   & 2.25                                   & 4                                                     & 1.8                                    & 3                                         & 1.35                                   \\
+		\rowcolor[HTML]{BBDAFF}
+		Nachhaltigkeit                            & 15.00\%                                 & 4                                                   & 0.6                                    & 4                                                   & 0.6                                    & 1                                                     & 0.15                                   & 1                                         & 0.15                                   \\
+		Flexibilit채t                              & 5.00\%                                  & 3                                                   & 0.15                                   & 5                                                   & 0.25                                   & 4                                                     & 0.2                                    & 4                                         & 0.2                                    \\
+		\rowcolor[HTML]{BBDAFF}
+		Unterhaltskosten                          & 35.00\%                                 & 4                                                   & 1.4                                    & 4                                                   & 1.4                                    & 2                                                     & 0.7                                    & 1                                         & 0.35                                   \\
+		\textbf{Gesamt}                           & \textbf{100.00\%}                       & \textbf{}                                           & \textbf{3.95}                          & \textbf{}                                           & \textbf{4.5}                           & \textbf{}                                             & \textbf{2.85}                          & \textbf{}                                 & \textbf{2.05}
+	\end{tabular}
+\end{sidewaystable}
+
+\subsubsection{Nutzwertanalyse: Programmiersprachen}
+
+\begin{sidewaystable}[!htp]
+	\centering
+	\caption{Nutzwertanalyse der Programmiersprachen}
+	\label{nwa:sprachen}
+	\begin{tabular}{l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}l{.1\textwidth}}
+		\rowcolor[HTML]{9698ED}
+		{\color[HTML]{FFFFFF} \textbf{Kriterien}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Gewicht}}} & \multicolumn{2}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{C}}}                                                                                              & \multicolumn{2}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{C++}}}                                                                                            & \multicolumn{2}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Java}}}                                                                                           & \multicolumn{2}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Haskell}}}                                                                                        \\
+		\rowcolor[HTML]{9698ED}
+		{\color[HTML]{FFFFFF} \textbf{}}          & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{}}}        & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Bewertung}}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Gesamt}}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Bewertung}}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Gesamt}}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Bewertung}}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Gesamt}}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Bewertung}}} & \multicolumn{1}{c}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Gesamt}}} \\
+		Performanz                                & 30.00\%                                                                             & 5                                                                                     & 1.5                                                                                & 5                                                                                     & 1.5                                                                                & 4                                                                                     & 1.2                                                                                & 5                                                                                     & 1.5                                                                                \\
+		\rowcolor[HTML]{BBDAFF}
+		Speichereffizienz                         & 30.00\%                                                                             & 5                                                                                     & 1.5                                                                                & 5                                                                                     & 1.5                                                                                & 3                                                                                     & 0.9                                                                                & 4                                                                                     & 1.2                                                                                \\
+		Dokumentation                             & 20.00\%                                                                             & 5                                                                                     & 1                                                                                  & 4                                                                                     & 0.8                                                                                & 4                                                                                     & 0.8                                                                                & 2                                                                                     & 0.4                                                                                \\
+		\rowcolor[HTML]{BBDAFF}
+		Systemische Vorraussetzungen              & 10.00\%                                                                             & 5                                                                                     & 0.5                                                                                & 5                                                                                     & 0.5                                                                                & 3                                                                                     & 0.3                                                                                & 3                                                                                     & 0.3                                                                                \\
+		Datenstrukturen                           & 10.00\%                                                                             & 3                                                                                     & 0.3                                                                                & 4                                                                                     & 0.4                                                                                & 5                                                                                     & 0.5                                                                                & 5                                                                                     & 0.5                                                                                \\
+		\rowcolor[HTML]{BBDAFF}
+		\textbf{Gesamt}                           & \textbf{100.00\%}                                                                   & \textbf{}                                                                             & \textbf{4.8}                                                                       & \textbf{}                                                                             & \textbf{4.7}                                                                       & \textbf{}                                                                             & \textbf{3.7}                                                                       & \textbf{}                                                                             & \textbf{3.9}
+	\end{tabular}
+\end{sidewaystable}
+
+\subsubsection{Nutzwertanalyse: Datentyp der Menge Q}
+\begin{sidewaystable}[!htp]
+	\centering
+	\caption{Nutzwertanalyse der Datentypen für Q}
+	\label{nwa:datentyp}
+	\begin{tabular}{l{.16\textwidth}l{.16\textwidth}l{.16\textwidth}l{.16\textwidth}l{.16\textwidth}l{.16\textwidth}}
+		\rowcolor[HTML]{9698ED}
+		\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} }                                     & \cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} }                                   & \multicolumn{2}{l}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Hashmap}}} & \multicolumn{2}{l}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Binärbaum}}} \\
+		\rowcolor[HTML]{9698ED}
+		\multirow{-2}{*}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Kriterien}}} & \multirow{-2}{*}{\cellcolor[HTML]{9698ED}{\color[HTML]{FFFFFF} \textbf{Gewicht}}} & {\color[HTML]{FFFFFF} \textbf{Bewertung}}  & {\color[HTML]{FFFFFF} \textbf{Gesamt}} & {\color[HTML]{FFFFFF} \textbf{Bewertung}}   & {\color[HTML]{FFFFFF} \textbf{Gesamt}}  \\
+		Speicheraufwand                                                                     & 25.00\%                                                                           & 2                                          & 0.5                                    & 2                                           & 0.5                                     \\
+		\rowcolor[HTML]{BBDAFF}
+		Schnelligkeit Daten Einfügen (Insert                                                & 20.00\%                                                                           & 5                                          & 1                                      & 4                                           & 0.8                                     \\
+		Schnelligkeit Auslesen (Look-up)                                                    & 55.00\%                                                                           & 5                                          & 2.75                                   & 4                                           & 2.2                                     \\
+		\rowcolor[HTML]{BBDAFF}
+		\textbf{Gesamt}                                                                     & \textbf{100.00\%}                                                                 & \textbf{}                                  & \textbf{4.25}                          & \textbf{}                                   & \textbf{3.5}
+	\end{tabular}
+\end{sidewaystable}
+
+\subsection{Auszüge}
+\subsubsection{Lastenheft}
+\renewcommand{\labelenumii}{\theenumii}
+\renewcommand{\theenumii}{\theenumi.\arabic{enumii}.}
+\label{auszug:lastenheft}
+\begin{enumerate}
+	\item Spezifikationen des Algorithmus
+	\begin{enumerate}
+		\item Der Algorithmus muss 2 Listen von Strings verarbeiten können,
+		wobei eine dieser Listen garantiert in den Speicher passt und die zweite
+		eine beliebige Größe haben kann.
+		\item Der Algorithmus muss aus der ersten Liste sämtliche Strings finden,
+		welche den Strings aus der zweiten Liste ähneln. Die gefundenen Strings
+		sollen ausgegeben werden.
+		\item Der Algorithmus ist in C zu programmieren.
+		\item der Algorithmus verarbeitet 7-Bit ASCII Strings schreibungsunabhängig. Zeichensetzung
+		ist beim Vergleich generell zu ignorieren; Ausnahmen bilden die
+		Charaktere Bindestrich, Unterstrich und Leerzeichen.
+	\end{enumerate}
+	\item Spezifikationen des Kommandozeilenprogramms
+	\begin{enumerate}
+		\item Der Algorithmus muss über die Kommmandozeile ausführbar sein.
+		\item Die Erste Liste wird immer als Dateiname übergeben.
+		\item Die zweite Liste kann entweder als Dateiname oder über STDIN übergeben werden.
+		\item die GNU Standards für Kommandozeilenprogramme müssen eingehalten werden.
+		\item Die POSIX Utility Guidelines müssen eingehalten werden.
+		\item Das Programm muss unter openSuSE 13.1 laufen.
+		\item Alle für das Programm erforderliche Abhängigkeiten
+		(z.B. Pakete, Bibliotheken) müssen für openSuSE 13.1 verfügbar sein.
+		\item Das Programm muss auf einem einzigen Kern lauffähig sein, und
+		darf das laufen auf mehreren Kernen in einem Shared-Memory-Environment
+		unterstützen.
+		\item Das Programm darf mit maximal 32GB Arbeitsspeicher arbeiten, und nicht mehr
+		als 200 GB Festplattenspeicher zur Kalkulation verwenden. Zwischenprozessliche Kommunikationswege
+		sind ausgeschlossen.
+		\item Das Programm gibt Fehler und Debug Daten über STDERR aus.
+		\item Errechnete Ergebnisse werden über STDOUT ausgegeben.
+		\item Die Zielplatform ist Intel x86-64 (intel64).
+	\end{enumerate}
+	\item Spezifikationen der Qualitätssicherung
+	\begin{enumerate}
+		\item Der Algorithmus muss überprüfbar sein.
+		\item Unittests sind verfügbar gemacht worden.
+	\end{enumerate}
+	\item Spezifikationen der Dokumentation
+	\begin{enumerate}
+		\item Sämtliche Funktionen müssen über einen Doc String dokumentiert werden
+		\item Die Doc Strings der Funktionen müssen auf Englisch geschrieben werden.
+	\end{enumerate}
+\end{enumerate}
+
+
+\subsubsection{Pflichtenheft}
+\label{auszug:pflichtenheft}
+
+\subsubsection{Pseudocode: Algorithmus}
+\begin{figure}[!htp]
+	\caption{Aktivitätsdiagramm der Programmlogik}
+	\label{listing:pseudocode}
+	\lstinputlisting[language=C, caption=Pseudocode des zu implementierenden Algorithmus]{anhang/pseudo.code}
+	\centering
+\end{figure}
+
 \subsubsection{Quellcodeauszug: Dynamische Array}
 \lstinputlisting[language=C, label=lising:arrayImplementation, caption=Auszug aus dem C Quellcode der dynamischen Array]{anhang/array.c}
 
 \subsubsection{Quellcodeauszug: Hashtable Implementation}
 \lstinputlisting[language=C, label=listing:hashtableImplmentation, caption=Auszug aus dem C Quellcode der dynamischen Array]{anhang/hashmap.c}
 
-\subsubsection{Auszug: Hilfeausgabe des Kommandozeilenprogramms}
-
-\subsection{Dokumentationsphase}
 \subsubsection{Auszug: Entwicklerdokumentation}
 \lstinputlisting[language=C, label=listing:entwicklerDoku, caption=Beispiel eines Docstrings für Entwickler]{anhang/docstring.c}
 
 \subsubsection{Auszug: Endnutzerdokumentation}
-
 \begin{lstlisting}[style=xterm, label=fig:cliHelp, caption=Ausgabe der Endnutzerdokumentation über den --help parameter]
 
 	nils@chantico:~/git/ematch/src> ./qgjoin --help
